unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/CMPL123__Audit_Assessment__c.object-meta.xml
<CustomObject>
    <description>Audit Assessment Object</description>
    <label>Audit Assessment</label>
    <nameField>
        <label>Audit Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>