unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Audit_Assessment_Template__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Audit_Assessment_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Assessment Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123__Audit_Assessment_Template__c.CMPL123__Status__c</field>
                <operation>equals</operation>
                <value>Effective</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123__Audit_Assessment_Template__c</referenceTo>
        <relationshipLabel>Audit Assessments</relationshipLabel>
        <relationshipName>Audit_Assessments</relationshipName>
        <type>Lookup</type>
    </CustomField>