unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Percent_Score__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Percent_Score__c</fullName>
        <formula>IF( CMPL123__Total_Weight_Hidden__c  = 0 , 0 ,(CMPL123__Total_Score__c/CMPL123__Total_Weight_Hidden__c))</formula>
        <label>Percent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>