unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Question10_Captured_Evidence__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question10_Captured_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captured Evidence</description>
        <label>Captured Evidence</label>
        <type>Checkbox</type>
    </CustomField>