unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Question11_Comment__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question11_Comment__c</fullName>
        <description>Comment</description>
        <label>Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>