unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Question11_Create_Finding__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question11_Create_Finding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create Finding</description>
        <label>Create Finding</label>
        <type>Checkbox</type>
    </CustomField>