unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Question12_Answer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question12_Answer__c</fullName>
        <description>Answer</description>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Don't Know</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>