unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Question12_Text__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question12_Text__c</fullName>
        <description>Question 1 Text</description>
        <label>Question 12</label>
        <type>TextArea</type>
    </CustomField>