unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Question_11_Score__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Question_11_Score__c</fullName>
        <formula>IF( ISPICKVAL(  CMPL123__Question11_Answer__c  , 'N/A') || ISPICKVAL(CMPL123__Question11_Answer__c , 'No') || ISBLANK( TEXT(CMPL123__Question11_Answer__c) ) ,0,CMPL123__Weight11__c )</formula>
        <label>Question 11 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>