unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Revision__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Revision__c</fullName>
        <formula>CMPL123__Revision_HIDDEN__c</formula>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>