unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Template__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Template__c</fullName>
        <formula>CMPL123__Audit_Assessment_Template__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template</label>
        <type>Text</type>
    </CustomField>