unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Total_Score_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Total_Score_1__c</fullName>
        <formula>IF( ISBLANK( CMPL123__Question1_Text__c) ,0 , CMPL123__Question_1_Score__c ) +                                       
IF( ISBLANK( CMPL123__Question2_Text__c) ,0 , CMPL123__Question_2_Score__c ) +
IF( ISBLANK( CMPL123__Question3_Text__c) ,0 , CMPL123__Question_3_Score__c ) +
IF( ISBLANK( CMPL123__Question4_Text__c) ,0 , CMPL123__Question_4_Score__c ) +
IF( ISBLANK( CMPL123__Question5_Text__c) ,0 , CMPL123__Question_5_Score__c ) +
IF( ISBLANK( CMPL123__Question6_Text__c) ,0 , CMPL123__Question_6_Score__c ) +
IF( ISBLANK( CMPL123__Question7_Text__c) ,0 , CMPL123__Question_7_Score__c ) +
IF( ISBLANK( CMPL123__Question8_Text__c) ,0 , CMPL123__Question_8_Score__c ) +
IF( ISBLANK( CMPL123__Question9_Text__c) ,0 , CMPL123__Question_9_Score__c ) +
IF( ISBLANK( CMPL123__Question10_Text__c) ,0 , CMPL123__Question_10_Score__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>