unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Total_Score_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Total_Score_2__c</fullName>
        <formula>IF( ISBLANK( CMPL123__Question11_Text__c) ,0 , CMPL123__Question_11_Score__c ) +
IF( ISBLANK( CMPL123__Question12_Text__c) ,0 , CMPL123__Question_12_Score__c ) +
IF( ISBLANK( CMPL123__Question13_Text__c) ,0 , CMPL123__Question_13_Score__c ) +
IF( ISBLANK( CMPL123__Question14_Text__c) ,0 , CMPL123__Question_14_Score__c ) +
IF( ISBLANK( CMPL123__Question15_Text__c) ,0 , CMPL123__Question_15_Score__c ) +
IF( ISBLANK( CMPL123__Question16_Text__c) ,0 , CMPL123__Question_16_Score__c ) +
IF( ISBLANK( CMPL123__Question17_Text__c) ,0 , CMPL123__Question_17_Score__c ) +
IF( ISBLANK( CMPL123__Question18_Text__c) ,0 , CMPL123__Question_18_Score__c ) +
IF( ISBLANK( CMPL123__Question19_Text__c) ,0 , CMPL123__Question_19_Score__c ) +
IF( ISBLANK( CMPL123__Question20_Text__c) ,0 , CMPL123__Question_20_Score__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>