unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Total_Score_3__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Total_Score_3__c</fullName>
        <formula>IF( ISBLANK( CMPL123__Question21_Text__c) ,0 , CMPL123__Question_21_Score__c ) +
IF( ISBLANK( CMPL123__Question22_Text__c) ,0 , CMPL123__Question_22_Score__c ) +
IF( ISBLANK( CMPL123__Question23_Text__c) ,0 , CMPL123__Question_23_Score__c ) +
IF( ISBLANK( CMPL123__Question24_Text__c) ,0 , CMPL123__Question_24_Score__c ) +
IF( ISBLANK( CMPL123__Question25_Text__c) ,0 , CMPL123__Question_25_Score__c ) +
IF( ISBLANK( CMPL123__Question26_Text__c) ,0 , CMPL123__Question_26_Score__c ) +
IF( ISBLANK( CMPL123__Question27_Text__c) ,0 , CMPL123__Question_27_Score__c ) +
IF( ISBLANK( CMPL123__Question28_Text__c) ,0 , CMPL123__Question_28_Score__c ) +
IF( ISBLANK( CMPL123__Question29_Text__c) ,0 , CMPL123__Question_29_Score__c ) +
IF( ISBLANK( CMPL123__Question30_Text__c) ,0 , CMPL123__Question_30_Score__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>