unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Total_Score__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Total_Score__c</fullName>
        <formula>CMPL123__Total_Score_1_HIDDEN__c + CMPL123__Total_Score_2_HIDDEN__c + CMPL123__Total_Score_3_HIDDEN__c + CMPL123__Total_Score_4_HIDDEN__c + CMPL123__Total_Score_5_HIDDEN__c</formula>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>