unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Total_Weight__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Total_Weight__c</fullName>
        <formula>CMPL123__Total_Weight_1__c +  CMPL123__Total_Weight_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>