unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Total_Weight_Hidden__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Total_Weight_Hidden__c</fullName>
        <label>Total Weight HIDDEN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>