unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Weight11__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Weight11__c</fullName>
        <label>Question 11 Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>