unpackaged/main/default/objects/CMPL123__Audit_Assessment__c/fields/CMPL123__Weight12__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Weight12__c</fullName>
        <label>Question 12 Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>